--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">ACM</string>
-
+    <string name="app_name">ACM IIT(ISM) Dhanbad</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
 
 </resources>
